--- a/elements.html
+++ b/elements.html
@@ -51,10 +51,10 @@
                                         <li><a href="rooms.html">rooms</a></li>
                                         <li><a href="about.html">About</a></li>
                                         <li><a href="#">blog <i class="ti-angle-down"></i></a>
-                                            <ul class="submenu">
+                                            <!-- <ul class="submenu">
                                                 <li><a href="blog.html">blog</a></li>
                                                 <li><a href="single-blog.html">single-blog</a></li>
-                                            </ul>
+                                            </ul> -->
                                         </li>
                                         <li><a class="active" href="#">pages <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
