--- a/rooms.html
+++ b/rooms.html
@@ -52,10 +52,10 @@
                                         <li><a class="active" href="rooms.html">rooms</a></li>
                                         <li><a href="about.html">About</a></li>
                                         <li><a href="#">blog <i class="ti-angle-down"></i></a>
-                                            <ul class="submenu">
+                                            <!-- <ul class="submenu">
                                                 <li><a href="blog.html">blog</a></li>
                                                 <li><a href="single-blog.html">single-blog</a></li>
-                                            </ul>
+                                            </ul> -->
                                         </li>
                                         <li><a href="contact.html">Contact</a></li>
                                     </ul>
